header spacing fixed

--- a/src/containers/VinderContainer.css
+++ b/src/containers/VinderContainer.css
@@ -35,16 +35,16 @@
 
 .help-button {
     text-decoration: none;
-    padding: 10px;
+    padding: 15px;
 }
 
 .delete-button {
     height: 30px;
     width: 30px;
-    padding: 10px;
+    padding: 15px;
 }
 
 #spacer-div {
     width: 30px;
-    padding: 10px;
+    padding: 15px;
 }
